--- a/layouts/shortcodes/gallery.html
+++ b/layouts/shortcodes/gallery.html
@@ -20,7 +20,7 @@
     {{ end }}
 
     <a href="{{ $original.Permalink }}">
-      <img src="{{ $new.Permalink }}" class="img-fluid rounded mb-3">
+      <img src="{{ $new.Permalink }}" class="margin-bottom-2">
     </a>
 
   {{ end }}
