Accordion shortcode. Tweak footer. Tweak table

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -66,7 +66,7 @@
         <div class="grid-container">
           <div class="usa-footer__logo grid-row">
             <div class="grid-col-auto">
-              <span>Powered by <a href="https://gohugo.io/">Hugo</a> v{{ hugo.Version }}</span>
+              <span>Made with <a href="https://gohugo.io/">Hugo</a> and <a href="https://v2.designsystem.digital.gov/">USWDS</a></span>
             </div>
           </div>
         </div>
