--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -64,9 +64,13 @@
     <footer class="usa-footer usa-footer--slim" role="contentinfo">
       <div class="usa-footer__secondary-section">
         <div class="grid-container">
-          <div class="usa-footer__logo grid-row">
+          <div class="grid-row">
             <div class="grid-col-auto">
-              <span>Made with <a href="https://gohugo.io/">Hugo</a> and <a href="https://v2.designsystem.digital.gov/">USWDS</a></span>
+              <span class="display-inline-block">Made with <a href="https://gohugo.io/">Hugo</a> and <a href="https://v2.designsystem.digital.gov/">USWDS</a></span>
+              <span class="margin-left-1 margin-right-1">|</span>
+              <span class="display-inline-block"><a href="/index.xml">RSS feed</a></span>
+              <span class="margin-left-1 margin-right-1">|</span>
+              <span class="display-inline-block"><a href="#">Return to top</a></span>
             </div>
           </div>
         </div>
