--- a/layouts/partials/header-link.html
+++ b/layouts/partials/header-link.html
@@ -1,4 +1,4 @@
 {{ $icon := partial "icon/hash.html" }}
-{{ $content := . | replaceRE "(<h[2] id=\"([^\"]+)\">)(.+)(</h[2]+>)" `${1}${3} <a class="header-icon-link" href="#${2}"><i data-feather="link"></i></a>${4}` }}
+{{ $content := . | replaceRE "(<h[2] id=\"([^\"]+)\">)(.+)(</h[2]+>)" `${1}${3} <a aria-label="header link" class="header-icon-link" href="#${2}"><i data-feather="link"></i></a>${4}` }}
 {{ $content := replaceRE "<i data-feather=\"link\"></i>" $icon $content }}
 {{ $content | safeHTML }}
