--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -7,6 +7,7 @@
       {{ $count := .Count }}
       {{ with site.GetPage (printf "/%s/%s" $type $name) }}
         <li>
+          <span class="usa-sr-only">Tag count</span>
           <span class="usa-tag">{{ $count }}</span>
           <a href="{{ .Permalink }}">{{ $name }}</a>
         </li>
