Add lastmod date, enable git info

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,7 +4,8 @@
     {{ range where .Pages.ByPublishDate.Reverse "Section" "post" }}
       <li>
         <span class="usa-sr-only">Publish date</span>
-        <span class="usa-tag">{{ .PublishDate.Format "2006-01-02" }}</span>
+        {{ $dateFormat := (partial "date-format.html" | string) }}
+        <span class="usa-tag">{{ .PublishDate.Format $dateFormat }}</span>
         <a href="{{ .Permalink }}">{{ .Title }}</a>
       </li>
     {{ end }}
