--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -2,7 +2,17 @@
   <h1>{{ .Title }}</h1>
   
   <p>
-    <strong>Publish date: </strong>{{ .PublishDate.Format "2006-01-02" }}
+    {{ $dateFormat := (partial "date-format.html" | string) }}
+    {{ $publishDate := .PublishDate }}
+    <strong>Published: </strong>{{ $publishDate.Format $dateFormat }}
+    
+    {{ with .Lastmod }}
+      {{ if gt . $publishDate }}
+        <span class="margin-left-1 margin-right-1">|</span>
+        <strong>Last modified: </strong>{{ .Format $dateFormat }}
+      {{ end }}
+    {{ end }}
+    
     {{ $tags := slice }}
     {{ with .Params.tags }}
       <br>
