Restyle post info, footer info

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -66,11 +66,11 @@
         <div class="grid-container">
           <div class="grid-row">
             <div class="grid-col-auto">
-              <span class="display-inline-block">Made with <a href="https://gohugo.io/">Hugo</a> and <a href="https://v2.designsystem.digital.gov/">USWDS</a></span>
-              <span class="margin-left-1 margin-right-1">|</span>
-              <span class="display-inline-block"><a href="/index.xml">RSS feed</a></span>
-              <span class="margin-left-1 margin-right-1">|</span>
-              <span class="display-inline-block"><a href="#">Return to top</a></span>
+              <span class="display-inline-block margin-bottom-1">Made with <a href="https://gohugo.io/">Hugo</a> and <a href="https://v2.designsystem.digital.gov/">USWDS</a></span>
+              <br>
+              <span class="display-inline-block margin-bottom-1"><a href="/index.xml">RSS feed</a></span>
+              <br>
+              <span class="display-inline-block margin-bottom-1"><a href="#">Return to top</a></span>
             </div>
           </div>
         </div>
