Fix os.Stat path

--- a/layouts/partials/debug-table.html
+++ b/layouts/partials/debug-table.html
@@ -278,22 +278,47 @@
 <table class="{{ $class }}">
   <tr>
     <td>.IsDir</td>
-    <td>{{ with.File }}{{ (os.Stat .Path).IsDir }}{{ end }}</td>
+    <td>
+      {{ with.File }}
+        {{ $path := print "content/" .Path }}
+        {{ (os.Stat $path).IsDir }}
+      {{ end }}
+    </td>
   </tr>
   <tr>
     <td>.Mode</td>
-    <td>{{ with.File }}{{ (os.Stat .Path).Mode }}{{ end }}</td>
+    <td>
+      {{ with.File }}
+        {{ $path := print "content/" .Path }}
+        {{ (os.Stat $path).Mode }}
+      {{ end }}
+    </td>
   </tr>
   <tr>
     <td>.ModTime</td>
-    <td>{{ with.File }}{{ (os.Stat .Path).ModTime }}{{ end }}</td>
+    <td>
+      {{ with.File }}
+        {{ $path := print "content/" .Path }}
+        {{ (os.Stat $path).ModTime }}
+      {{ end }}
+    </td>
   </tr>
   <tr>
     <td>.Name</td>
-    <td>{{ with.File }}{{ (os.Stat .Path).Name }}{{ end }}</td>
+    <td>
+      {{ with.File }}
+        {{ $path := print "content/" .Path }}
+        {{ (os.Stat $path).Name }}
+      {{ end }}
+    </td>
   </tr>
   <tr>
     <td>.Size</td>
-    <td>{{ with.File }}{{ print (os.Stat .Path).Size " bytes" }}{{ end }}</td>
+    <td>
+      {{ with.File }}
+        {{ $path := print "content/" .Path }}
+        {{ print (os.Stat $path).Size " bytes" }}
+      {{ end }}
+    </td>
   </tr>
 </table>
