--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -1,17 +1,12 @@
 {{ define "main" }}
   <h1>{{ .Title }}</h1>
-  {{ $type := .Type }}
   <ul>
-    {{ range $key, $value := .Data.Terms.ByCount }}
-      {{ $name := .Name }}
-      {{ $count := .Count }}
-      {{ with site.GetPage (printf "/%s/%s" $type $name) }}
-        <li>
-          <span class="usa-sr-only">Tag count</span>
-          <span class="usa-tag">{{ $count }}</span>
-          <a href="{{ .Permalink }}">{{ $name }}</a>
-        </li>
-      {{ end }}
+    {{ range .Data.Terms.ByCount }}
+      <li>
+        <span class="usa-sr-only">Tag count</span>
+        <span class="usa-tag">{{ .Count }}</span>
+        <a href="{{ .Page.Permalink }}">{{ .Page.Title }}</a>
+      </li>
     {{ end }}
   </ul>
 {{ end }}
