--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -62,28 +62,6 @@
     </main>
 
     <footer class="usa-footer usa-footer--slim" role="contentinfo">
-      <div class="usa-footer__secondary-section" id="footer-debug">
-        <div class="grid-container">
-          <div class="grid-row grid-gap">
-            <div class="desktop:grid-col-12">
-              
-              {{ $heading := "Debug info" }}
-              {{ $id := $heading | md5 }}
-              <div class="usa-accordion usa-accordion--bordered">
-                <h2 class="usa-accordion__heading">
-                  <button class="usa-accordion__button" aria-expanded="false" aria-controls="{{ $id }}">
-                    {{ $heading }}
-                  </button>
-                </h2>
-                <div id="{{ $id }}" class="usa-accordion__content usa-prose">
-                  {{ partial "debug-table.html" . }}
-                </div>
-              </div>
-
-            </div>
-          </div>
-        </div>
-      </div>
       
       <div class="usa-footer__secondary-section" id="footer-main">
         <div class="grid-container">
@@ -91,10 +69,14 @@
             <div class="desktop:grid-col-12">
 
               <span class="">
-                Made with <a href="https://gohugo.io/">Hugo</a> and <a href="https://v2.designsystem.digital.gov/">USWDS</a> | 
-                Deployed to <a href="https://www.netlify.com/">Netlify</a> | 
-                <a href="/index.xml">RSS feed</a>
+                Made with <a href="https://gohugo.io/">Hugo</a> & <a href="https://v2.designsystem.digital.gov/">USWDS</a> |  
+                <a href="/index.xml">RSS feed</a> |
+                <button id="toggle-debug-info" class="usa-button usa-button--unstyled">Toggle debug info</button>
               </span>
+
+              <div id="debug-info" hidden="">
+                {{ partial "debug-table.html" . }}
+              </div>
 
             </div>
           </div>
@@ -104,6 +86,9 @@
 
     {{ $themeJs := resources.Get "js/uswds.min.js" | fingerprint }}
     <script src="{{ $themeJs.Permalink }}"></script>
+
+    {{ $customJs := resources.Get "js/custom.js" | fingerprint | minify }}
+    <script src="{{ $customJs.Permalink }}"></script>
 
     {{ partial "google-analytics-async.html" . }}
   </body>
