--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -68,16 +68,23 @@
           <div class="grid-row grid-gap">
             <div class="desktop:grid-col-12">
 
-              <button id="toggle-debug-info" class="usa-button">Toggle debug info</button>
-              <br><br>
-
-              <div id="debug-info" hidden="">
-                {{ partial "debug-table.html" . }}
+              {{ $heading := "Debug info" }}
+              {{ $id := $heading | md5 }}
+              <div class="usa-accordion">
+                <h2 class="usa-accordion__heading">
+                  <button id="debug-info-button" class="usa-accordion__button" aria-expanded="false" aria-controls="{{ $id }}">
+                    {{ $heading }}
+                  </button>
+                </h2>
+                <div id="{{ $id }}" class="usa-accordion__content usa-prose">
+                  {{ partial "debug-table.html" . }}
+                </div>
               </div>
+              <br>
 
               <span class="">
-                Made with <a href="https://gohugo.io/">Hugo</a> |
-                Themed by <a href="https://v2.designsystem.digital.gov/">USWDS</a> | 
+                Made with <a href="https://gohugo.io/">Hugo</a> v{{ hugo.Version}} |
+                Themed by <a href="https://v2.designsystem.digital.gov/">USWDS</a> v2.0.2 | 
                 <a href="/index.xml">RSS feed</a>
               </span>
 
@@ -89,9 +96,6 @@
 
     {{ $themeJs := resources.Get "js/uswds.min.js" | fingerprint }}
     <script src="{{ $themeJs.Permalink }}"></script>
-
-    {{ $customJs := resources.Get "js/custom.js" | fingerprint | minify }}
-    <script src="{{ $customJs.Permalink }}"></script>
 
     {{ partial "google-analytics-async.html" . }}
   </body>
