--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -35,4 +35,14 @@
   
   {{ partial "header-link.html" .Content }}
 
+  <p>
+    {{ with .NextInSection }}
+      <strong>Next: </strong><a href="{{ .Permalink }}">{{ .Title }}</a>
+    {{ end }}
+    <br>
+    {{ with .PrevInSection }}
+      <strong>Prev: </strong><a href="{{ .Permalink }}">{{ .Title }}</a>
+    {{ end }}
+  </p>
+
 {{ end }}
