Fix closing table tag

--- a/layouts/partials/debug-table.html
+++ b/layouts/partials/debug-table.html
@@ -136,7 +136,7 @@
     <td>.File.UniqueID</td>
     <td>{{ with .File }}{{ .UniqueID }}{{ end }}</td>
   </tr>
-<table>
+</table>
 
 <h2>Section</h2>
 <table class="{{ $class }}">
