--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,13 +1,3 @@
-/* Background color */
-body {
-  background-color: #dcdee0;
-}
-
-header,
-main {
-  background-color: #fff;
-}
-
 /* Focus */
 details summary:focus {
   outline-offset: 0px;
@@ -62,7 +52,12 @@ blockquote {
 }
 
 /* Footer */
-#debug-info-button {
+#footer-main {
   background-color: #fff;
-  border: 1px solid;
+  border-top: 1px solid #dcdee0;
+}
+
+#footer-main,
+#footer-main a {
+  color: #757575;
 }
