--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,9 +3,8 @@
   <ul>
     {{ range where .Pages.ByPublishDate.Reverse "Section" "post" }}
       <li>
-        <span class="usa-sr-only">Publish date</span>
         {{ $dateFormat := (partial "date-format.html" | string) }}
-        <span class="usa-tag">{{ .PublishDate.Format $dateFormat }}</span>
+        <span class="text-gray-50">{{ .PublishDate.Format $dateFormat }}</span>
         <a href="{{ .Permalink }}">{{ .Title }}</a>
       </li>
     {{ end }}
